--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -61,7 +61,7 @@
                     {% endif %}
                 </div>
             </fieldset>
-        <div class="form-group">
+        <div class="form-group">source
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
         </form>
